modif2 erreur ecriture workflows

--- a/.github/workflows/control_tests.yaml
+++ b/.github/workflows/control_tests.yaml
@@ -1,4 +1,4 @@
-name: Pytest et flake8 control Push
+ame: Control Push
 on: push
 jobs:
   qa:
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout on master
-       uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@master
